--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-form {
+.divForm {
   border: 2px solid black;
   height: 300px;
   width: 300px;
@@ -11,6 +11,7 @@ form {
   align-items: center;
   flex-direction: column;
   box-shadow: 0px 5px 10px 4px rgba(17, 24, 29, 0.2);
+  text-align: center;
 }
 
 input {
